# sqlrec

./: .dockerignore  .gitignore  README.md  README_zh.md  package-lock.json  pom.xml
.github/workflows/: docker-build.yml
benchmark/: benchmark.sh  compute_features.sql  download_data.py  init.sh  init.sql  init_flink_table.sql  init_hive.sql  init_hive_table.sql  init_model.sql  init_sqlrec_sql.sql  load_features.sql  mock_data.py  request.lua  requirements.txt
deploy/: deploy_components.sh  deploy_minikube.sh  download_resource.sh  env.sh  pv.yaml
deploy/clickhouse/: clickhouse.yaml  deploy.sh  uninstall.sh
deploy/docker-registry/: deploy.sh  uninstall.sh
deploy/dolphinscheduler/: deploy.sh  dolphinscheduler-init.yaml  dolphinscheduler-install-plugins.yaml  dolphinscheduler.yaml  dolphinscheduler_env.sh.template  plugins_config  uninstall.sh
deploy/flink/: deploy.sh  init.sh  sql_gateway.yaml  uninstall.sh
deploy/growthbook/: deploy.sh  growthbook.yaml  uninstall.sh
deploy/hadoop/: core-site.xml  deploy.sh  hdfs-site.xml  init.sh  uninstall.sh
deploy/hdfs/: deploy.sh  hdfs-init-job.yaml  hdfs-pvc.yaml  hdfs.yaml  uninstall.sh
docker/: Dockerfile  copy_jar.Dockerfile  demo.Dockerfile  sqlrec-model-tzrec.Dockerfile
docs/: index.md
sqlrec-common/: pom.xml
sqlrec-config/: pom.xml
sqlrec-connectors/: pom.xml
sqlrec-core/: pom.xml
sqlrec-demo/: pom.xml
sqlrec-frontend/: pom.xml
sqlrec-model/: pom.xml
sqlrec-model/src/main/cpp/: CMakeLists.txt  server.cpp
sqlrec-sql-parser/: pom.xml
sqlrec-udf/: pom.xml
sqlrec-ui/: pom.xml
(+618 files in other folders)
